Solve the fix navbar issue on Safari

--- a/main.css
+++ b/main.css
@@ -7,12 +7,20 @@
   flex-wrap: wrap;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .justify-content-center {
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .justify-content-between {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .flex-column {
